# sqct

./: .gitignore  CMakeLists.txt  README  README.md  factorzs2.cpp  factorzs2.h  fixedpoint.cpp  fixedpoint.h  gatelibrary.cpp  gatelibrary.h  hprhelpers.cpp  hprhelpers.h  main.cpp  mainA.cpp  matrix2x2.cpp  matrix2x2.h  netgenerator.cpp  output.cpp  output.h  requestprocessor.cpp  requestprocessor.h  rint.cpp  rint.h  serializers.h  solvenormequation.cpp  solvenormequation.h  symbolic_angle.cpp  symbolic_angle.h  tcount.cpp  tcount.h  test.cpp  test.h  timemeasurement.h  unitaryapproximator.cpp
appr/: approxlist.cpp  approxlist.h  cup.cpp  cup.h  findhalves.cpp  findhalves.h  normsolver.cpp  normsolver.h  observations.cpp  observations.h  rcup.cpp  rcup.h  topt-bfs.cpp  topt-bfs.h  toptzrot2.cpp  toptzrot2.h  zrot_cache.cpp  zrot_cache.h
es/: exactdecomposer.cpp  exactdecomposer.h  optsequencegenerator.cpp  optsequencegenerator.h
sk/: netgenerator.cpp  unitaryapproximator.cpp
tests/: intermidiate-results.nb  rcup.nb  result-processing-example.nb  result-processing-unifrom.nb
theory/: hoptimalitytest.cpp  hoptimalitytest.h  numbers-stat.h  toptimalitytest.cpp  toptimalitytest.h
